--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ton-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "npm run build && node ./dist/index.js",
-    "dev": "tsnd index.ts",
+    "dev": "tsnd src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
