--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start": "npm run build && node ./dist/index.js",
+    "start": "ts-node src/index.ts",
     "dev": "tsnd src/index.ts",
     "build": "tsc"
   },
@@ -18,6 +18,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "ts-node": "^10.7.0"
   }
 }
