--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "build": "tsc && cp -R src/data dist/src",
     "dev": "tsnd src/index.ts",
-    "build": "tsc"
+    "postinstall": "npm run build",
+    "prestart": "npm run build",
+    "start": "node dist/src/index.js"
+  },
+  "engines": {
+    "node": "16.14.0"
   },
   "keywords": [],
   "author": "",
