--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "express": "^4.17.3",
-    "ts-node": "^10.7.0"
+    "express": "^4.17.3"
   }
 }
