--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3"
   }
 }
